--- a/src/main/java/com/mycompany/tiendaonline/Main.form
+++ b/src/main/java/com/mycompany/tiendaonline/Main.form
@@ -188,7 +188,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\alumno\Desktop\TiendaOnline\src\main\Resources\iconouser.png"/>
+              <Image iconType="3" name="/iconouser.png"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
